feat: snippets/search
