# lib/flow_contract_syncer_web/controllers/snippet_search_controller.ex
@@ -1,18 +1,18 @@
-defmodule FlowContractSyncerWeb.ContractSearchController do
+defmodule FlowContractSyncerWeb.SnippetSearchController do
   use FlowContractSyncerWeb, :controller
   use PhoenixSwagger
 
   require Logger
 
   alias FlowContractSyncer.{Repo, Utils}
-  alias FlowContractSyncer.Schema.{Contract, Network}
+  alias FlowContractSyncer.Schema.{Network, Snippet}
 
   swagger_path :search do
-    get("/api/v1/search")
-    summary("Search contracts, order by dependants count desc")
+    get("/api/v1/snippets/search")
+    summary("Search snippets")
     produces("application/json")
     tag("Search")
-    operation_id("search_contract")
+    operation_id("search_snippets")
 
     security([%{Bearer: []}])
 
@@ -27,10 +27,10 @@ defmodule FlowContractSyncerWeb.ContractSearchController do
         enum: [:mainnet]
       )
 
-      scope(
+      type(
         :query,
         :string,
-        "Search scope, should be \"code\" or \"uuid\" or \"uuid,code\". Default is \"uuid,code\". NOTE: Search in code is a bit slower than search in uuid",
+        "Should be one of all, resource, struct, interface, function, enum, event",
         required: false
       )
     end
@@ -42,7 +42,19 @@ defmodule FlowContractSyncerWeb.ContractSearchController do
   @search_params_schema %{
     keyword: [type: :string, required: true, length: [min: 3]],
     network: [type: :string, in: ["mainnet"], default: "mainnet"],
-    scope: [type: :string, in: ["code", "uuid", "uuid,code", "code,uuid"], default: ["uuid,code"]],
+    type: [
+      type: :string,
+      in: [
+        "resource",
+        "struct",
+        "interface",
+        "function",
+        "enum",
+        "event",
+        "all"
+      ],
+      default: "all"
+    ],
     offset: [type: :integer, number: [min: 0], default: 0],
     limit: [type: :integer, number: [min: 1, max: 500], default: 200]
   }
@@ -52,13 +64,13 @@ defmodule FlowContractSyncerWeb.ContractSearchController do
           %{
             keyword: keyword,
             network: network,
-            scope: scope,
+            type: type,
             offset: offset,
             limit: limit
           }} <- Tarams.cast(params, @search_params_schema) do
       network = Repo.get_by(Network, name: network)
-      contracts = Contract.search(network, keyword, scope, offset, limit)
-      render(conn, :contract_search, contracts: contracts)
+      snippets = Snippet.search(network, keyword, type, offset, limit)
+      render(conn, :snippet_search, snippets: snippets)
     else
       {:error, errors} ->
         conn
