# lib/flow_contract_syncer_web/router.ex
@@ -33,9 +33,10 @@ defmodule FlowContractSyncerWeb.Router do
     get("/contracts/:uuid/dependencies", ContractController, :dependencies)
     get("/contracts/:uuid/dependants", ContractController, :dependants)
     # get("/contracts/:uuid/history", ContractController, :history)
+
     get("/contracts/:uuid/snippets", ContractController, :snippets)
 
-    # get("/snippets/search", SnippetSearchController, :search)
+    get("/snippets/search", SnippetSearchController, :search)
     # get("/snippets/:code_hash", SnippetController, :show)
     # get("/snippets/:code_hash/contracts", SnippetController, :contracts)
   end
